--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Contact List JC</string>
+    <!--Tool bar-->
+    <string name="tool_bar_back_content_description">"Ir atras"</string>
+    <string name="tool_bar_options_content_description">"Opciones"</string>
 </resources>
