--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,7 @@
     <string name="home_screen_edit_user">Editar usuario</string>
     <string name="home_screen_search_user">Buscar usuario</string>
     <string name="home_screen_add_user">Buscar usuario</string>
+    <!-- Database Errors -->
+    <string name="database_error_unknown_error">Error desconocido</string>
 
 </resources>
